# glados

./: .gitignore  AbstractTree.html  Builtins.html  CONTRIBUTING.md  EnvStoreRetrieve.html  Error.html  Interpretor.html  Lexer.html  Main.html  Makefile  Parser.html  bonjour.sh  build_doc.sh  compiler_test.sh  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  doc-index.json  ex  (+11 more)
.github/workflows/: CD.yaml  CI.yaml  Release.yaml
app/: Main.hs
docs/: CODE_OF_CONDUCT.md  COMPILE_PROCESS.md  LANGUAGE_REVIEW.md  LICENSE.md  README.md  REFERENCES.md  TODO.md
docs/BNF/: lisp-lexical.bnf  rizz-grammar.md  rizz-lexical.md  rizz.md
docs/BNF/rizz/: lexical.bnf  structure.bnf
examples/lisp/builtins/: builtins2.scm
examples/lisp/conditions/: if1.scm
glados/: Ast.html  Bytecode.html  Format.html  Lexer.html  Parser.html  ParserBinaryExpr.html  ParserHelper.html  ParserStmt.html  Tokens.html  doc-index.json  glados.haddock
glados/src/: Ast.html  Bytecode.html  Format.html  Lexer.html  Parser.html  ParserBinaryExpr.html  ParserHelper.html  ParserStmt.html  Tokens.html
lib/backend/: Generator.hs
lib/backend/lisp/: Bytecode.hs
lib/backend/rizz/: Bytecode.hs
lib/backend/types/: Env.hs  Instructions.hs  Stack.hs
lib/format/: Format.hs
lib/frontend/lisp/: Lexer.hs  Parser.hs
lib/frontend/lisp/types/: Ast.hs  Tokens.hs
lib/frontend/rizz/: Analyser.hs  Lexer.hs  Parser.hs  ParserBinOp2.hs  ParserBinaryExpr.hs  ParserHelper.hs  ParserStmt.hs
lib/frontend/rizz/types/: Ast.hs  Token.hs  Tokens.hs
lib/lexer/: Lexer.hs
lib/lisp/: AbstractTree.hs  Builtins.hs  EnvStoreRetrieve.hs  Error.hs  Interpretor.hs  Lexer.hs  Parser.hs  UserDefined.hs
lib/rizz/: Analyser.hs  Ast.hs  Format.hs  Lexer.hs  Parser.hs  Token.hs
src/: Interpretor.hs  Lexer.hs  Lib.hs  Main.hs  Parser.hs
src/compiler/: Arguments.hs  Compilation.hs  Compiler.hs  CompilerBytecode.hs  Main.hs  ParseArgs.hs  Utils.hs
src/compiler/types/: Options.hs
src/lexer/: Lexer.hs
src/vm/: Builtins.hs  Interpreter.hs  Main.hs  ParseArgs.hs  Parser.hs  Utils.hs
src/vm/std/: Open.rz  Open.rz.bc
src/vm/types/: Data.hs  Env.hs  Fds.hs  Function.hs  OpCodes.hs  Stack.hs
tests/: Abs.scm  All.rz  All.rz.bc  Factorial.rz  Factorial.rz.bc  InterpretorTests.hs  LexerTests.hs  Main.hs  Main.rz  Main.rz.bc  ParserTests.hs  Spec.hs  Structs.rz  Test.rz  Test.rz.bc  Test2.rz.bc  Tests.hs  compiler_test.sh  functionaltests.sh  main.c  tests_lisp.scm  vm_test.sh
tests/bad_test/: AutoVarAssign.rz  DoubleDeclaration.rz  DoubleGlobalVarDeclaration.rz  ForForgotOneSemicolon.rz  ForForgotSemicolons.rz  ForeachForgotIndexVariable.rz  ForeachSameVarName.rz  ForgotVariableWhile.rz  GlobalVarAutoAssign.rz  GlobalVarNoAssign.rz  InvalidWhile.rz  LeftAssign.rz  MainWithoutReturn.rz  NoColonTernaryOperation.rz  NoConditionIf.rz  NoElseTernaryOperation.rz  NoEndBracketFunction.rz  NoEndParenthese.scm  NoNameDeclaration.rz  NoQMarkTernaryOperation.rz  NoSemiColon.rz  OperationWithoutGetReturnValue.rz  ReturnNoTypeFunction.rz  ReturnUnknownVar.rz  ReturnWhile.rz  SameNameGlobalVarDeclaration.rz  SameVarNameAsAGlobalOne.rz  SameVariableNameDeclaration.rz  ShadowDeclaration.rz  UnknownReturnType.rz  UnknownVarType.rz  UnknownVariableAssign.rz  VarDeclarationWithoutAssign.rz
tests/examples/files/lisp/errors/: malformedLambda.scm  malformedLambda2.scm
tests/examples/files/lisp/functions/: function1.scm  function2.scm
tests/examples/output/lisp/errors/: error1.scm
tests/files/lisp/builtins/: builtins2.scm
tests/files/lisp/functions/: function1.scm
tests/hunit/: Main.hs
tests/hunit/lib/frontend/rizz/: TestsAst.hs  TestsLexer.hs  TestsParser.hs
tests/lib_rizz/: is_alpha.rz  is_alpha.rz.bc  is_neg.rz  is_neg.rz.bc  is_num.rz  is_num.rz.bc  my_strcmp.rz  my_strcmp.rz.bc  my_strlen.rz  my_strlen.rz.bc  strchr.rz  strchr.rz.bc  strcmp.rz  strcpy.rz  strcpy.rz.bc  strlen.rz  strlen.rz.bc  strncmp.rz  strstr.rz  strstr.rz.bc
tests/valid_test/: Abs.scm  Abs.scm.bc  AssignValueToStructVariable.rz  AssignValueToStructVariable.rz.bc  Factorial.rz.bc  ForWithServalCondition.rz  ForWithServalCondition.rz.bc  IfWithServalCondition.rz  IfWithServalCondition.rz.bc  Lisp1.scm.bc  MainReturn0.rz  MainReturn0.rz.bc  ReturnValidFunctionCall.rz  ReturnValidFunctionCall.rz.bc  ReturnValidVariable.rz  ReturnValidVariable.rz.bc  ValidFor.rz  ValidFor.rz.bc  ValidForEach.rz  ValidForEach.rz.bc  ValidIfElse.rz  ValidIfElse.rz.bc  ValidIfWithoutElse.rz  ValidIfWithoutElse.rz.bc  ValidOperationOnCondition.rz  ValidOperationOnCondition.rz.bc  ValidTernaryOperation.rz  ValidTernaryOperation.rz.bc  ValidWhile.rz  ValidWhile.rz.bc  WhileWithServalCondition.rz  WhileWithServalCondition.rz.bc
web-rizz/: README.md
web-rizz/backend/: .env-example  .gitignore  package-lock.json  package.json
web-rizz/backend/src/: server.js
web-rizz/backend/src/services/: GithubService.js  WorkerService.js
web-rizz/frontend/: index.html  package-lock.json  package.json  rizzplayground.vercel.app_2026-01-14_22-11-03.report.html  vercel.json  vite.config.js
web-rizz/frontend/.vercel/: project.json
web-rizz/frontend/src/: App.css  App.jsx  index.css  utils.js
web-rizz/frontend/src/components/Editor/: Editor.css  Editor.jsx
web-rizz/frontend/src/components/FileTree/: FileTree.css  FileTree.jsx
web-rizz/frontend/src/components/Navbar/: Navbar.css  Navbar.jsx
web-rizz/frontend/src/services/: api.js
web-rizz/frontend/src/tuto/: 01-hello-world.md  02-anatomy.md  03-variables.md  04-integer.md  05-float.md  06-boolean.md  07-char.md  08-numeric-operations.md  09-comparison.md  10-function.md  11-comments.md  12-if.md  13-for-while.md  14-struct.md  15-arrays.md  16-builtins.md  index.js
(+4 files in other folders)
