cabal-version:          3.0
name:                   glados
version:                2.0.0

synopsis:               Generic Language And Data Operand Syntax

homepage:               https://github.com/lszsrd/glados.git
license:                MIT
license-file:           LICENSE.md
author:                 lszsrd
maintainer:             laszlo.serdet@epitech.eu

category:               Language
build-type:             Simple
extra-doc-files:        docs/CONTRIBUTING.md, docs/CODE_OF_CONDUCT.md

library backend
    default-language:   Haskell2010
    hs-source-dirs:     lib/backend/types, lib/backend
    exposed-modules:
        Stack
        Instructions
        Generator
    build-depends:      base

library frontend-rizz
    default-language:   Haskell2010
    hs-source-dirs:     lib/frontend/rizz/types, lib/frontend/rizz
    exposed-modules:
        Tokens
        Ast
        Lexer
        Parser
        Analyser
        ParserHelper
    build-depends:      base, format

library format
    default-language:   Haskell2010
    hs-source-dirs:     lib/format
    exposed-modules:
        Format
    build-depends:      base

executable glados-compiler
    default-language:   Haskell2010
    main-is:            Main.hs
    hs-source-dirs:     src/compiler
    ghc-options:        -Wall -O2 -rtsopts
    other-modules:
        Compiler
        Compilation
        CompilerBytecode
    build-depends:      base, filepath, format, frontend-rizz, backend

executable glados-vm
    default-language:   Haskell2010
    main-is:            Main.hs
    hs-source-dirs:     src/vm
    ghc-options:        -Wall -O2 -rtsopts
    build-depends:      base, frontend-rizz, backend

test-suite unit_tests
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     tests/hunit, tests/hunit/lib/frontend/rizz
    other-modules:
        TestsLexer
    build-depends:      base, HUnit, frontend-rizz
