cabal-version:          3.0
name:                   glados
version:                2.0.0

synopsis:               Generic Language And Data Operand Syntax

homepage:               https://github.com/lszsrd/glados.git
license:                MIT
license-file:           LICENSE.md
author:                 lszsrd
maintainer:             laszlo.serdet@epitech.eu

category:               Language
build-type:             Simple
extra-doc-files:        docs/CONTRIBUTING.md, docs/CODE_OF_CONDUCT.md

library frontend-lisp
    default-language:   Haskell2010
    hs-source-dirs:     lib/frontend/lisp/types, lib/frontend/lisp
    ghc-options:        -Wall -O2
    exposed-modules:
        Tokens
        Ast
        Lexer
        Parser
    build-depends:      base, format

library frontend-rizz
    default-language:   Haskell2010
    hs-source-dirs:     lib/frontend/rizz/types, lib/frontend/rizz
    ghc-options:        -Wall -O2
    exposed-modules:
        Tokens
        Ast
        Lexer
        Parser
        ParserHelper
        ParserStmt
        ParserBinaryExpr
        ParserBinOp2
    build-depends:      base, format

library backend-lisp
    default-language:   Haskell2010
    hs-source-dirs:     lib/backend/lisp
    ghc-options:        -Wall -O2
    exposed-modules:
        Bytecode
    build-depends:      base, frontend-lisp, containers

library backend-rizz
    default-language:   Haskell2010
    hs-source-dirs:     lib/backend/rizz
    ghc-options:        -Wall -O2
    exposed-modules:
        Bytecode
    build-depends:      base, frontend-rizz, containers

library format
    default-language:   Haskell2010
    hs-source-dirs:     lib/format
    ghc-options:        -Wall -O2
    exposed-modules:
        Format
    build-depends:      base

executable glados-compiler
    default-language:   Haskell2010
    main-is:            Main.hs
    hs-source-dirs:     src/compiler/types, src/compiler
    ghc-options:        -Wall -O2
    other-modules:
        Options
        ParseArgs
        Compiler
    build-depends:      base, filepath, format, frontend-lisp, frontend-rizz, backend-lisp, backend-rizz
    mixins:
        frontend-lisp (Tokens as Lisp.Tokens, Ast as Lisp.Ast, Lexer as Lisp.Lexer, Parser as Lisp.Parser)
        , frontend-rizz (Tokens as Rizz.Tokens, Ast as Rizz.Ast, Lexer as Rizz.Lexer, Parser as Rizz.Parser)
        , backend-lisp (Bytecode as Lisp.Bytecode)
        , backend-rizz (Bytecode as Rizz.Bytecode)

executable glados-vm
    default-language:   Haskell2010
    main-is:            Main.hs
    hs-source-dirs:     src/vm/types, src/vm
    ghc-options:        -Wall -O2
    other-modules:
        OpCodes
        Function
        Stack
        Env
        Fds
        Utils
        ParseArgs
        Parser
        Interpreter
    build-depends:      base, filepath, format, random

test-suite unit_tests
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     tests/hunit, tests/hunit/lib/frontend/rizz
    other-modules:
        TestsLexer
        TestsParser
        TestsAst
    build-depends:      base, HUnit, frontend-rizz, frontend-lisp, backend-lisp, backend-rizz
    mixins:
        frontend-lisp (Tokens as Lisp.Tokens, Ast as Lisp.Ast, Lexer as Lisp.Lexer, Parser as Lisp.Parser)
        , frontend-rizz (Tokens as Rizz.Tokens, Ast as Rizz.Ast, Lexer as Rizz.Lexer, Parser as Rizz.Parser)
        , backend-lisp (Bytecode as Lisp.Bytecode)
        , backend-rizz (Bytecode as Rizz.Bytecode)
